--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <div style="text-align:center">
   <a class="twitter-share-button"
-    href="https://twitter.com/intent/tweet?text=Hello%20world"
+    href="https://twitter.com/intent/tweet?text=I+just+made+a+travel+plan+using+Roadtripper%21"
     data-size="large">
   Tweet</a>
   <script src="weather.js"></script>
